bin/scribe/src/snapshots/scribe__parser__tests__parse_function_def.snap
---
source: src/parser.rs
assertion_line: 453
expression: "parse_to_tree(\"\n            function allocate_unbounded() -> memPtr {\n                memPtr := mload(64)\n            }\")"

---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  │ └╼ memPtr:u32
  └╼ body
    └╼ assign - memPtr:u32
      └╼ mload(u32): u32
        └╼ 64:u32
