bin/scribe/src/snapshots/scribe__parser__tests__parse_function_def_without_return.snap
---
source: src/parser.rs
assertion_line: 489
expression: "parse_to_tree(\"\n            function allocate_unbounded()  {\n                let memPtr := mload(64)\n            }\")"

---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  └╼ body
    └╼ declare - memPtr:u256
      └╼ mload(u32): u256
        └╼ 64:u32
