bin/scribe/src/snapshots/scribe__parser__tests__snapshot_test.snap
---
source: src/parser.rs
assertion_line: 215
expression: expressions_to_tree(&parse_yul_syntax(yul))

---
AST
├╼ declare - x
│ └╼ 1
└╼ declare - y
  └╼ 2
